Proyecto1/Parser/parser.output
Gramática

    0 $accept: START END

    1 START: MAIN

    2 MAIN: VOID RMAIN PARA PARC LLAVA LIST_INST LLAVC

    3 LIST_INST: LIST_INST INSTRUCTION
    4          | INSTRUCTION

    5 INSTRUCTION: PRINT ';'
    6            | DECLARATION ';'
    7            | IF

    8 PRINT: PRINTF PARA EXP PARC

    9 DECLARATION: TYPES ID '=' EXP

   10 IF: RIF EXP LLAVA LIST_INST LLAVC ELSEIF_LIST ELSE
   11   | RIF EXP LLAVA LIST_INST LLAVC ELSE

   12 ELSEIF_LIST: ELSEIF_LIST ELSEIF
   13            | ELSEIF

   14 ELSEIF: RELSE RIF EXP LLAVA LIST_INST LLAVC

   15 ELSE: RELSE LLAVA LIST_INST LLAVC
   16     | ε

   17 TYPES: INT
   18      | TSTRING
   19      | BOOLEAN
   20      | TSFLOAT

   21 EXP: EXP SUMA EXP
   22    | EXP MENOS EXP
   23    | EXP POR EXP
   24    | EXP DIV EXP
   25    | EXP MEN EXP
   26    | EXP MAY EXP
   27    | EXP MEN_IG EXP
   28    | EXP MAY_IG EXP
   29    | EXP DIF EXP
   30    | EXP IG EXP
   31    | EXP AND EXP
   32    | EXP OR EXP
   33    | PARA EXP PARC
   34    | PRIMITIVE

   35 PRIMITIVE: NUMERO
   36          | STRING
   37          | BOOL
   38          | LIST_ARR
   39          | DECIMAL

   40 BOOL: RTRUE
   41     | RFALSE

   42 LIST_ARR: LIST_ARR CORA EXP CORC
   43         | ID


Terminales con las reglas donde aparecen

    END (0) 0
    ';' (59) 5 6
    '=' (61) 9
    error (256)
    DECIMAL <std::string> (258) 39
    NUMERO <std::string> (259) 35
    ID <std::string> (260) 9 43
    STRING <std::string> (261) 36
    SUMA <std::string> (262) 21
    MENOS <std::string> (263) 22
    POR <std::string> (264) 23
    DIV <std::string> (265) 24
    PRINTF <std::string> (266) 8
    RIF <std::string> (267) 10 11 14
    RELSE <std::string> (268) 14 15
    VOID <std::string> (269) 2
    INT <std::string> (270) 17
    TSTRING <std::string> (271) 18
    BOOLEAN <std::string> (272) 19
    PARA <std::string> (273) 2 8 33
    PARC <std::string> (274) 2 8 33
    RMAIN <std::string> (275) 2
    LLAVA <std::string> (276) 2 10 11 14 15
    LLAVC <std::string> (277) 2 10 11 14 15
    RTRUE <std::string> (278) 40
    RFALSE <std::string> (279) 41
    CORA <std::string> (280) 42
    CORC <std::string> (281) 42
    TSFLOAT <std::string> (282) 20
    MAY <std::string> (283) 26
    MEN <std::string> (284) 25
    MAY_IG <std::string> (285) 28
    MEN_IG <std::string> (286) 27
    DIF <std::string> (287) 29
    IG <std::string> (288) 30
    AND <std::string> (289) 31
    OR <std::string> (290) 32


No terminales con las reglas donde aparecen

    $accept (38)
        on left: 0
    START <func_main*> (39)
        on left: 1
        on right: 0
    MAIN <func_main*> (40)
        on left: 2
        on right: 1
    LIST_INST <list_instruction*> (41)
        on left: 3 4
        on right: 2 3 10 11 14 15
    INSTRUCTION <instruction*> (42)
        on left: 5 6 7
        on right: 3 4
    PRINT <instruction*> (43)
        on left: 8
        on right: 5
    DECLARATION <instruction*> (44)
        on left: 9
        on right: 6
    IF <instruction*> (45)
        on left: 10 11
        on right: 7
    ELSEIF_LIST <list_instruction*> (46)
        on left: 12 13
        on right: 10 12
    ELSEIF <instruction*> (47)
        on left: 14
        on right: 12 13
    ELSE <list_instruction*> (48)
        on left: 15 16
        on right: 10 11
    TYPES <TipoDato> (49)
        on left: 17 18 19 20
        on right: 9
    EXP <expression*> (50)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34
        on right: 8 9 10 11 14 21 22 23 24 25 26 27 28 29 30 31 32 33 42
    PRIMITIVE <expression*> (51)
        on left: 35 36 37 38 39
        on right: 34
    BOOL <expression*> (52)
        on left: 40 41
        on right: 37
    LIST_ARR <expression*> (53)
        on left: 42 43
        on right: 38 42


Estado 0

    0 $accept: • START END

    VOID  desplazar e ir al estado 1

    START  ir al estado 2
    MAIN   ir al estado 3


Estado 1

    2 MAIN: VOID • RMAIN PARA PARC LLAVA LIST_INST LLAVC

    RMAIN  desplazar e ir al estado 4


Estado 2

    0 $accept: START • END

    END  desplazar e ir al estado 5


Estado 3

    1 START: MAIN •

    $default  reduce usando la regla 1 (START)


Estado 4

    2 MAIN: VOID RMAIN • PARA PARC LLAVA LIST_INST LLAVC

    PARA  desplazar e ir al estado 6


Estado 5

    0 $accept: START END •

    $default  aceptar


Estado 6

    2 MAIN: VOID RMAIN PARA • PARC LLAVA LIST_INST LLAVC

    PARC  desplazar e ir al estado 7


Estado 7

    2 MAIN: VOID RMAIN PARA PARC • LLAVA LIST_INST LLAVC

    LLAVA  desplazar e ir al estado 8


Estado 8

    2 MAIN: VOID RMAIN PARA PARC LLAVA • LIST_INST LLAVC

    PRINTF   desplazar e ir al estado 9
    RIF      desplazar e ir al estado 10
    INT      desplazar e ir al estado 11
    TSTRING  desplazar e ir al estado 12
    BOOLEAN  desplazar e ir al estado 13
    TSFLOAT  desplazar e ir al estado 14

    LIST_INST    ir al estado 15
    INSTRUCTION  ir al estado 16
    PRINT        ir al estado 17
    DECLARATION  ir al estado 18
    IF           ir al estado 19
    TYPES        ir al estado 20


Estado 9

    8 PRINT: PRINTF • PARA EXP PARC

    PARA  desplazar e ir al estado 21


Estado 10

   10 IF: RIF • EXP LLAVA LIST_INST LLAVC ELSEIF_LIST ELSE
   11   | RIF • EXP LLAVA LIST_INST LLAVC ELSE

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 29
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 11

   17 TYPES: INT •

    $default  reduce usando la regla 17 (TYPES)


Estado 12

   18 TYPES: TSTRING •

    $default  reduce usando la regla 18 (TYPES)


Estado 13

   19 TYPES: BOOLEAN •

    $default  reduce usando la regla 19 (TYPES)


Estado 14

   20 TYPES: TSFLOAT •

    $default  reduce usando la regla 20 (TYPES)


Estado 15

    2 MAIN: VOID RMAIN PARA PARC LLAVA LIST_INST • LLAVC
    3 LIST_INST: LIST_INST • INSTRUCTION

    PRINTF   desplazar e ir al estado 9
    RIF      desplazar e ir al estado 10
    INT      desplazar e ir al estado 11
    TSTRING  desplazar e ir al estado 12
    BOOLEAN  desplazar e ir al estado 13
    LLAVC    desplazar e ir al estado 33
    TSFLOAT  desplazar e ir al estado 14

    INSTRUCTION  ir al estado 34
    PRINT        ir al estado 17
    DECLARATION  ir al estado 18
    IF           ir al estado 19
    TYPES        ir al estado 20


Estado 16

    4 LIST_INST: INSTRUCTION •

    $default  reduce usando la regla 4 (LIST_INST)


Estado 17

    5 INSTRUCTION: PRINT • ';'

    ';'  desplazar e ir al estado 35


Estado 18

    6 INSTRUCTION: DECLARATION • ';'

    ';'  desplazar e ir al estado 36


Estado 19

    7 INSTRUCTION: IF •

    $default  reduce usando la regla 7 (INSTRUCTION)


Estado 20

    9 DECLARATION: TYPES • ID '=' EXP

    ID  desplazar e ir al estado 37


Estado 21

    8 PRINT: PRINTF PARA • EXP PARC

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 38
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 22

   39 PRIMITIVE: DECIMAL •

    $default  reduce usando la regla 39 (PRIMITIVE)


Estado 23

   35 PRIMITIVE: NUMERO •

    $default  reduce usando la regla 35 (PRIMITIVE)


Estado 24

   43 LIST_ARR: ID •

    $default  reduce usando la regla 43 (LIST_ARR)


Estado 25

   36 PRIMITIVE: STRING •

    $default  reduce usando la regla 36 (PRIMITIVE)


Estado 26

   33 EXP: PARA • EXP PARC

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 39
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 27

   40 BOOL: RTRUE •

    $default  reduce usando la regla 40 (BOOL)


Estado 28

   41 BOOL: RFALSE •

    $default  reduce usando la regla 41 (BOOL)


Estado 29

   10 IF: RIF EXP • LLAVA LIST_INST LLAVC ELSEIF_LIST ELSE
   11   | RIF EXP • LLAVA LIST_INST LLAVC ELSE
   21 EXP: EXP • SUMA EXP
   22    | EXP • MENOS EXP
   23    | EXP • POR EXP
   24    | EXP • DIV EXP
   25    | EXP • MEN EXP
   26    | EXP • MAY EXP
   27    | EXP • MEN_IG EXP
   28    | EXP • MAY_IG EXP
   29    | EXP • DIF EXP
   30    | EXP • IG EXP
   31    | EXP • AND EXP
   32    | EXP • OR EXP

    SUMA    desplazar e ir al estado 40
    MENOS   desplazar e ir al estado 41
    POR     desplazar e ir al estado 42
    DIV     desplazar e ir al estado 43
    LLAVA   desplazar e ir al estado 44
    MAY     desplazar e ir al estado 45
    MEN     desplazar e ir al estado 46
    MAY_IG  desplazar e ir al estado 47
    MEN_IG  desplazar e ir al estado 48
    DIF     desplazar e ir al estado 49
    IG      desplazar e ir al estado 50
    AND     desplazar e ir al estado 51
    OR      desplazar e ir al estado 52


Estado 30

   34 EXP: PRIMITIVE •

    $default  reduce usando la regla 34 (EXP)


Estado 31

   37 PRIMITIVE: BOOL •

    $default  reduce usando la regla 37 (PRIMITIVE)


Estado 32

   38 PRIMITIVE: LIST_ARR •
   42 LIST_ARR: LIST_ARR • CORA EXP CORC

    CORA  desplazar e ir al estado 53

    $default  reduce usando la regla 38 (PRIMITIVE)


Estado 33

    2 MAIN: VOID RMAIN PARA PARC LLAVA LIST_INST LLAVC •

    $default  reduce usando la regla 2 (MAIN)


Estado 34

    3 LIST_INST: LIST_INST INSTRUCTION •

    $default  reduce usando la regla 3 (LIST_INST)


Estado 35

    5 INSTRUCTION: PRINT ';' •

    $default  reduce usando la regla 5 (INSTRUCTION)


Estado 36

    6 INSTRUCTION: DECLARATION ';' •

    $default  reduce usando la regla 6 (INSTRUCTION)


Estado 37

    9 DECLARATION: TYPES ID • '=' EXP

    '='  desplazar e ir al estado 54


Estado 38

    8 PRINT: PRINTF PARA EXP • PARC
   21 EXP: EXP • SUMA EXP
   22    | EXP • MENOS EXP
   23    | EXP • POR EXP
   24    | EXP • DIV EXP
   25    | EXP • MEN EXP
   26    | EXP • MAY EXP
   27    | EXP • MEN_IG EXP
   28    | EXP • MAY_IG EXP
   29    | EXP • DIF EXP
   30    | EXP • IG EXP
   31    | EXP • AND EXP
   32    | EXP • OR EXP

    SUMA    desplazar e ir al estado 40
    MENOS   desplazar e ir al estado 41
    POR     desplazar e ir al estado 42
    DIV     desplazar e ir al estado 43
    PARC    desplazar e ir al estado 55
    MAY     desplazar e ir al estado 45
    MEN     desplazar e ir al estado 46
    MAY_IG  desplazar e ir al estado 47
    MEN_IG  desplazar e ir al estado 48
    DIF     desplazar e ir al estado 49
    IG      desplazar e ir al estado 50
    AND     desplazar e ir al estado 51
    OR      desplazar e ir al estado 52


Estado 39

   21 EXP: EXP • SUMA EXP
   22    | EXP • MENOS EXP
   23    | EXP • POR EXP
   24    | EXP • DIV EXP
   25    | EXP • MEN EXP
   26    | EXP • MAY EXP
   27    | EXP • MEN_IG EXP
   28    | EXP • MAY_IG EXP
   29    | EXP • DIF EXP
   30    | EXP • IG EXP
   31    | EXP • AND EXP
   32    | EXP • OR EXP
   33    | PARA EXP • PARC

    SUMA    desplazar e ir al estado 40
    MENOS   desplazar e ir al estado 41
    POR     desplazar e ir al estado 42
    DIV     desplazar e ir al estado 43
    PARC    desplazar e ir al estado 56
    MAY     desplazar e ir al estado 45
    MEN     desplazar e ir al estado 46
    MAY_IG  desplazar e ir al estado 47
    MEN_IG  desplazar e ir al estado 48
    DIF     desplazar e ir al estado 49
    IG      desplazar e ir al estado 50
    AND     desplazar e ir al estado 51
    OR      desplazar e ir al estado 52


Estado 40

   21 EXP: EXP SUMA • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 57
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 41

   22 EXP: EXP MENOS • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 58
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 42

   23 EXP: EXP POR • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 59
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 43

   24 EXP: EXP DIV • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 60
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 44

   10 IF: RIF EXP LLAVA • LIST_INST LLAVC ELSEIF_LIST ELSE
   11   | RIF EXP LLAVA • LIST_INST LLAVC ELSE

    PRINTF   desplazar e ir al estado 9
    RIF      desplazar e ir al estado 10
    INT      desplazar e ir al estado 11
    TSTRING  desplazar e ir al estado 12
    BOOLEAN  desplazar e ir al estado 13
    TSFLOAT  desplazar e ir al estado 14

    LIST_INST    ir al estado 61
    INSTRUCTION  ir al estado 16
    PRINT        ir al estado 17
    DECLARATION  ir al estado 18
    IF           ir al estado 19
    TYPES        ir al estado 20


Estado 45

   26 EXP: EXP MAY • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 62
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 46

   25 EXP: EXP MEN • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 63
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 47

   28 EXP: EXP MAY_IG • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 64
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 48

   27 EXP: EXP MEN_IG • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 65
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 49

   29 EXP: EXP DIF • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 66
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 50

   30 EXP: EXP IG • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 67
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 51

   31 EXP: EXP AND • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 68
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 52

   32 EXP: EXP OR • EXP

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28

    EXP        ir al estado 69
    PRIMITIVE  ir al estado 30
    BOOL       ir al estado 31
    LIST_ARR   ir al estado 32


Estado 53

   42 LIST_ARR: LIST_ARR CORA • EXP CORC

    DECIMAL  desplazar e ir al estado 22
    NUMERO   desplazar e ir al estado 23
    ID       desplazar e ir al estado 24
    STRING   desplazar e ir al estado 25
    PARA     desplazar e ir al estado 26
    RTRUE    desplazar e ir al estado 27
    RFALSE   desplazar e ir al estado 28
